<resources>
    <string name="app_name">MyInstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_login_details_welp">Forgot your login details? Welp...</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="friends">Sign up to see photos from your friends.</string>
    <string name="already">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="ellipse">...</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="default_friend">default_friend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_last">First Last</string>
    <string name="logout">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_all_the_users">List of all the users</string>
    <string name="list_of_users">List of users.</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="favorite_users">Favorite Users</string>
</resources>
