<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project02.csc214.myinstagram.signup.SignupFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:src="@drawable/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="50dp"/>

    <TextView
        android:text="@string/friends"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:background="#dcdcdc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_signup_username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_signup_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7aaeff"
            android:onClick="signupButtonPress"/>

    </LinearLayout>

    <TextView
        android:background="#dcdcdc"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center">

        <TextView
            android:text="@string/already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signInButtonPress"/>

    </LinearLayout>

</LinearLayout>
