<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project02.csc214.myinstagram.profile.ProfileFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:id="@+id/profile_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_below="@+id/profile_pic"
            android:id="@+id/profile_tv_full_name"
            android:text="@string/first_last"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/profile_tv_full_name"
            android:id="@+id/profile_username"
            android:text="@string/username"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <Button
            android:text="@string/edit_profile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <Button
            android:text="@string/ellipse"
            android:textSize="30sp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:background="#00000000"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/profile_recycler_view">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>
